<resources>
    <string name="app_name">Code Quiz</string>
    <string name="header">Answer the following questions</string>
    <string name="question_1">Who was the CEO and founder of Udacity?</string>
    <string name="q1_answer_1">Sebastian Thrun</string>
    <string name="q1_answer_2">Larry Page</string>
    <string name="q1_answer_3">Steve Wozniak</string>
    <string name="question_2">Which Mobile Operating System is the most popular?</string>
    <string name="edit_text_hint">Answer</string>
    <string name="question_3">What is Google\'s flagship phone called?</string>
    <string name="question_4">Android can be programmed in the IDE Xcode.</string>
    <string name="question_5">What is the most downloaded app on the Google Play Store?</string>
    <string name="q5_answer_1">Instagram</string>
    <string name="q5_answer_2">Snapchat</string>
    <string name="q5_answer_3">Facebook</string>
    <string name="question_6">Who was the manufacturer for the Nexus 6P?</string>
    <string name="question_7">How much does the Pixel XL 128GB cost?</string>
    <string name="question_8">Fill in the Number for each Version of Android</string>
    <string name="question_9">What is the design language that Google uses for its software?</string>
    <string name="q9_answer_1">German</string>
    <string name="q9_answer_2">Bamboo</string>
    <string name="q9_answer_3">Material</string>
    <string name="question_10">What are the 3 Main Languages used in Android mobile development?</string>
    <string name="q10_answer_1">XML</string>
    <string name="q10_answer_2">SWIFT</string>
    <string name="q10_answer_3">SQL</string>
    <string name="q10_answer_4">KOTLIN</string>
    <string name="q10_answer_5">Java</string>
    <string name="q10_answer_6">Visual Basic</string>
    <string name="question_2_hint">Operating System</string>
    <string name="question_6_hint">Manufacturer</string>
    <string name="question_3_hint">Phone</string>
    <string name="question_4_true">True</string>
    <string name="question_4_false">False</string>
    <string name="q7_answer_1">$649</string>
    <string name="q7_answer_2">$749</string>
    <string name="q7_answer_3">$869</string>
    <string name="q7_answer_4">$949</string>
    <string name="edit_text_version">Version</string>
    <string name="q8_answer_1">KitKat</string>
    <string name="q8_answer_2">Nougat</string>
    <string name="q8_answer_3">Lollipop</string>
    <string name="q8_answer_4">Oreo</string>
</resources>
